Fix output word wrap

--- a/demo/index.css
+++ b/demo/index.css
@@ -46,11 +46,11 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 18em;
-    word-break: break-all;
 }
 
 .playground-run-output-text {
-    white-space: pre;
+    white-space: pre-wrap;
+    word-break: break-all;
 }
 
 .playground-compiled-viewer {
